# BOSS

./: .bossignore  .bossindexignore  .gitignore  AGENTS.md  BOSS.md  BUILD_PLAN.txt  IMPLEMENTATION_GUIDE.md  README.md  conftest.py  legion_build_eval.yaml  legion_tasks.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.boss/: config.toml  environment.json  review.md
BossApp/: Package.resolved  Package.swift
apps/boss-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/boss-ui/src-tauri/icons/: icon.icns
apps/boss-ui/src-tauri/src/: main.rs
benchmarks/: external_reliability.yaml  external_repos.yaml  golden_tasks.yaml  local_reliability.yaml
boss/: __init__.py  agents.py  api.py  config.py  configuration.py  control.py  execution.py  jobs.py  orchestrator.py  project_brain.py  review.py  router.py  runtime.py  sdk_runtime.py  types.py
cli/: __init__.py  boss_cli.py
config/: models.yaml  persona.yaml  runtime.yaml
docs/: boss-prompting.md  ios-delivery.md  ios-signing-setup.md  local-development.md  prompt-highlightswift-swap.md  ui-ux-prompts.md
examples/: boss_shell_hook.zsh  legion_tasks.yaml
scripts/: dev_doctor.py  release_check.sh  smoke_local.py
tests/: test_artifact_store.py  test_autonomous_loop.py  test_benchmark_suite.py  test_computer_engine.py  test_context_envelope.py  test_conversation_history_store.py  test_conversation_router.py  test_dashboard.py  test_deploy.py  test_eval_store.py  test_evaluator.py  test_execution_timeout.py  test_external_repos.py  test_integration_runtime.py  test_ios_delivery.py  test_lab.py  (+22 more)
(+221 files in other folders)
