[package]
name = "boss-ui"
version = "0.1.0"
description = "Native shell for the BOSS chat and command center"
authors = ["BOSS"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
